[project]
name = "careerpilot-ai"
version = "0.1.0"
description = "AI-powered career assistant built using LangChain, LangGraph and Groq LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-extras>=1.6.0",
]
